@@ -121,6 +121,7 @@
     <Compile Include="Options\UseTests.cs" />
     <Compile Include="Options\VerbosityLevel.cs" />
     <Compile Include="OSUtilities.cs" />
+    <Compile Include="Package\BamAssemblyDescription.cs" />
     <Compile Include="Package\DotNetAssemblyDescription.cs" />
     <Compile Include="Package\PackageDefinition.cs" />
     <Compile Include="Package\PackageListResourceFile.cs" />
