@@ -1,3 +1,5 @@
+08-Nov-2015 Updated Bam schema, so that BamAssemblies can use a major, minor, patch attribute, to specify the minimum version supported.
+
 07-Nov-2015 Fixes #52. Nullable fields in Convert functions of settings interfaces are now tested consistently (with .HasValue & .Value properties). Only C compiler interfaces use nullable types, as only these need to calculate common and delta settings.
 
 07-Nov-2015 Fixes #51. Removed legacy Mono package assembly compilation flags.
